[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "xh-dual-layer-app-engine"
version = "0.0.4"
description = "A library re-orangize the builtin argparser api to simply bootstrap app with second layer command"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]

[[project.authors]]
name = "xethhung"
email = "pypi@xethh.dev"

[project.urls]
Homepage = "https://github.com/xh-dev/xh-dual-layer-app-engine"
"Bug Tracker" = "https://github.com/xh-dev/xh-dual-layer-app-engine"
